--- a/app/src/main/res/layout/fragment_sold_products.xml
+++ b/app/src/main/res/layout/fragment_sold_products.xml
@@ -7,16 +7,61 @@
     android:background="@color/colorWhite"
     tools:context=".activities.ui.fragments.SoldProductsFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_sold_product_items"
+
+    <LinearLayout
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    <com.example.daveexpress.utils.MSPTextViewBold
+        android:id="@+id/tv_os_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/product_details_label_margin"
+        android:text="@string/lbl_OS_heading"
+        android:textColor="@color/item_value_text_color"
+        android:textSize="@dimen/product_details_label_textSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <com.example.daveexpress.utils.MSPButton
+        android:id="@+id/btn_go_to_OS"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/button_background"
+        android:foreground="?attr/selectableItemBackground"
+        android:gravity="center"
+        android:paddingTop="@dimen/btn_padding"
+        android:paddingBottom="@dimen/btn_padding"
+        android:text="@string/btn_lbl_go_to_os"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/btn_textSize"
+        tools:visibility="visible" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_sold_product_items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_OS" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_no_sold_products_found"
@@ -29,6 +74,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
