--- a/app/src/main/res/layout/activity_payment_card_details.xml
+++ b/app/src/main/res/layout/activity_payment_card_details.xml
@@ -41,12 +41,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end|right"
+        android:padding="8dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_margin="@dimen/cardview_compat_inset_shadow"
             android:visibility="visible"
             app:cardBackgroundColor="@color/colorPrimary"
@@ -75,13 +77,23 @@
                     android:paddingRight="@dimen/cart_item_paddingStartEnd">
 
                     <ImageView
-                        android:id="@+id/card_logo"
+                        android:id="@+id/visa_card_logo"
                         android:layout_width="50dp"
                         android:layout_height="26dp"
+                        android:visibility="gone"
                         android:layout_gravity="end|right"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_visa_new"
-                        app:tint="@android:color/white" />
+                        android:src="@drawable/ic_visa_new" />
+
+                    <ImageView
+                        android:id="@+id/master_card_logo"
+                        android:layout_width="50dp"
+                        android:layout_height="26dp"
+                        android:visibility="gone"
+                        android:layout_gravity="end|right"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_mastercard_new"
+                         />
 
                     <TextView
                         android:id="@+id/card_number"
@@ -296,10 +308,31 @@
 
     <View
         android:layout_width="0dp"
-        android:layout_height="2dp"
+        android:layout_height="12dp"
          />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <TextView
+            android:textColor="@color/black"
+            android:padding="2dp"
+            android:layout_marginLeft="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Amount: "/>
+
+        <TextView
+            android:id="@+id/bill_amount"
+            android:textColor="@color/black"
+            android:padding="2dp"
+            android:layout_marginLeft="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="N5000"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -338,6 +371,7 @@
     <TextView
         android:textColor="@color/black"
         android:padding="2dp"
+        android:layout_marginLeft="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/saved_cards_would_appear_here"/>
