--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
+    <color name="transparent">#0000FFFF</color>
     <color name="purple_500">#FF6200EE</color>
+    <color name="skyblue">#87CEEB</color>
+    <color name="neon">#1F51FF</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="colorWhite">#FFFFFFFF</color>
-    <color name="purple_normal">#A020F0</color>
+    <color name="purple_normal">#FF6200EE</color>
     <color name="red_300">#E57373</color>
     <color name="red_400">#EF5350</color>
     <color name="light_green_400">#9CCC65</color>
     <color name="light_green_500">#8BC34A</color>
     <color name="light_green_600">#7CB342</color>
-    <color name="colorPrimary">#FF6200EE</color>
+    <color name="colorPrimary">#A020F0</color>
     <color name="colorPrimaryDark">#222934</color>
     <color name="colorAccent">#FF3700B3</color>
     <color name="amber_800">#FF8F00</color>
@@ -44,5 +47,6 @@
 
     <color name="colorOrderStatusInProcess">#FF9800</color>
     <color name="colorOrderStatusDelivered">#8BC34A</color>
+
 
 </resources>
